Wed Aug 12 19:46:34 GMT 2015  Olly Betts <olly@survex.com>

	* src/readval.c: Anonymous stations can't be exported, so we don't need
	  to set them up ready for implicit exports.

Tue Aug 11 21:31:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/Makefile.am,tests/cavern.tst,
	  tests/cmd_set_bad.out: Improve errors for invalid survey names in
	  *equate and *export.

Tue Aug 11 20:34:05 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/cmd_begin_bad.out,tests/cmd_begin_bad.svx:
	  Improve error when *begin is followed by an invalid survey name.

Tue Aug 11 20:02:31 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Improve error when *begin is followed by an
	  invalid survey name.

Tue Aug 11 19:44:40 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 07 14:19:04 GMT 2015  Olly Betts <olly@survex.com>

	* src/aven.cc,src/gla-gl.cc: Ensure that the window has a depth buffer.
	  Whether it does by default seems to vary depending on OS and maybe
	  graphics card.  Fixes #55 (terrain is no longer visible through
	  itself), and also the rendering of passage tubes.  Thanks to Martin
	  Green for pointing me in the right direction for finding this fix.

Fri Aug 07 11:13:19 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Update to reflect *declination with a number not
	  working in 1.2.21.

Fri Aug 07 10:55:42 GMT 2015  Olly Betts <olly@survex.com>

	* src/netartic.c,tests/: Fix assertion if we try to identify a hanging
	  survey by an anonymous station.

Fri Aug 07 10:33:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Fix *declination with an angle to actually
	  work.

Tue Jul 28 19:18:37 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Ship thgeomag.h.

Tue Jul 28 19:10:52 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Distribute igrf coefficients file and script to
	  generate C header from it.
