@@ -1,3 +1,7 @@
+Thu Aug 13 16:11:03 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/commands.c: Correct an example in a TRANSLATORS comment.
+
 Wed Aug 12 19:46:34 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/readval.c: Anonymous stations can't be exported, so we don't need
